# Intel_CarAgent

./: .gitignore  README.md
src/caragent_agent/: README.md  package.xml  setup.cfg  setup.py
src/caragent_agent/caragent_agent/: agent_ros_node.py  io_adapters.py
src/caragent_agent/caragent_agent/agents/: __init__.py
src/caragent_agent/caragent_agent/agents/async_agent/: README.md  __init__.py  agent_ros_node.py  arrival_verification.py  async_agent_graph.py  async_agent_interface.py  async_agent_node.py  guidance.py  nav2_controller.py
src/caragent_agent/caragent_agent/agents/base/: __init__.py  base_agent_interface.py
src/caragent_agent/caragent_agent/config/: config.py  config.yaml  local_config.example.yaml  runtime_paths.py  runtime_profiles.py
src/caragent_agent/caragent_agent/controller/: controller_base.py
src/caragent_agent/caragent_agent/controller/nav2/: nav2_controller.py
src/caragent_agent/caragent_agent/impression_graph/: node.py  scene_memory.py
src/caragent_agent/caragent_agent/perception/: __init__.py  openvino_utils.py
src/caragent_agent/caragent_agent/perception/depth/: README.md  __init__.py  convert_depth_anything_openvino.py  run_depth_anything_openvino.py  run_depth_anything_v2.py
src/caragent_agent/caragent_agent/prompts/: agent_prompts.yaml  scene_memory_prompts.yaml  tool_prompts.yaml
src/caragent_agent/caragent_agent/scripts/: annotate_keyframes.py  build_keyframe_chunk_index.py  draw_fused_topdown_intuitive.py  draw_scan_diagnostics.py  recompute_clip.py
src/caragent_agent/caragent_agent/utils/: conversation_logger.py  geometry_utils.py  llm_handler.py  llm_request_generator.py  navigation_utils.py  trimesh_utils.py
src/caragent_agent/config/: config.yaml
src/caragent_agent/launch/: caragent_agent.launch.py
src/caragent_agent/test/: test_guidance.py  test_language_boundary.py
src/caragent_memory/: README.md  package.xml  setup.cfg  setup.py
src/caragent_memory/caragent_memory/: __init__.py  build_scene_memory.py  compare_models.py  convert_clip_openvino.py  convert_dinov2_openvino.py  dataset.py  dinov2_encoder.py  dinov2_openvino.py  geometry.py  image_quality.py  keyframe_recorder_node.py  openvino_clip.py  scan_summary.py  select_keyframes.py
src/caragent_memory/launch/: caragent_keyframe_collect.launch.py
src/caragent_memory/resource/: caragent_memory
src/caragent_memory/test/: test_build_scene_memory.py  test_geometry.py  test_image_quality.py  test_scan_summary.py  test_selector_logic.py
(+167 files in other folders)
